[gd_scene load_steps=2 format=3 uid="uid://gdoloxvu6nf3"]

[ext_resource type="Script" path="res://scripts/energy_morale_ui.gd" id="1_energy_ui"]

[node name="EnergyMoraleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_energy_ui")

[node name="Container" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 70.0
grow_horizontal = 2
alignment = 1

[node name="EnergyIcon" type="TextureRect" parent="Container"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5

[node name="ProgressBarContainer" type="Control" parent="Container"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="EnergyProgressBar" type="ProgressBar" parent="Container/ProgressBarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
show_percentage = false

[node name="EnergyLossFeedback" type="ProgressBar" parent="Container/ProgressBarContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
show_percentage = false

[node name="MoraleLock" type="ColorRect" parent="Container/ProgressBarContainer"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.4, 0.4, 0.4, 1)
